@@ -15,7 +15,8 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.4.4.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
+		<!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
@@ -39,7 +40,7 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 		</dependency> -->
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
@@ -50,22 +51,23 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 		</dependency>
-	
+
 		<dependency>
-		<groupId>org.apache.tomcat.embed</groupId>
-		<artifactId>tomcat-embed-jasper</artifactId>
-		<!--<scope>provided</scope>--></dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+			<!--<scope>provided</scope>-->
+		</dependency>
 		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency> -->
 		<dependency>
-	<groupId>junit</groupId>
-	<artifactId>junit</artifactId>
-	<version>4.12</version>
-	<scope>test</scope>
-</dependency> 
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency> 
 	</dependencies>
 
 	<build>
@@ -74,237 +76,54 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-		</plugins>
-	</build>
-	
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<includes>
+						<include>${runSuite}</include>
+					</includes>
+				</configuration>
+			</plugin>
+
+			<!– Sonar-JaCoCo integration plugin –>
+		<plugin>
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
+			<version>0.7.6.201602180812</version>
+			<configuration>
+				<destFile>${sonar.jacoco.reportPath}</destFile>
+				<append>true</append>
+			</configuration>
+			<executions>
+				<execution>
+					<id>agent</id>
+					<goals>
+						<goal>prepare-agent</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
+	</plugins>
+</build>
+
+<properties>
+	<sonar.sources>src/main</sonar.sources>
+	<sonar.tests>src/test</sonar.tests>
+	<!– Below property indicates the pattern of the test suite –>
+<runSuite>**/*Suite.class</runSuite>
+<!– Below property indicates the pattern of the test class –>
+<runSuite>**/*Test.class</runSuite>
+<!– Sonar-JaCoCo properties –>
+<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+<sonar.language>java</sonar.language>
+</properties>
+
+<!– Below plugin ensures the execution of test cases during maven build–>
 
-<!-- coverage -->
 
-<profile>
-
-    <id>coverage</id>
-
-    <build>
-
-        <plugins>
-
-            <plugin>
-
-                <groupId>org.apache.maven.plugins</groupId>
-
-                <artifactId>maven-surefire-plugin</artifactId>
-
-                <configuration>
-
-                    <argLine>${jacoco.agent.ut.arg}</argLine>
-
-                    <!-- Specific to generate mapping between tests and covered code -->
-
-                    <properties>
-
-                        <property>
-
-                            <name>listener</name>
-
-                            <value>org.sonar.java.jacoco.JUnitListener</value>
-
-                        </property>
-
-                    </properties>
-
-                    <!-- test failure ignore -->
-
-                    <testFailureIgnore>true</testFailureIgnore>
-
-                </configuration>
-
-            </plugin>
-
-            <plugin>
-
-                <groupId>org.apache.maven.plugins</groupId>
-
-                <artifactId>maven-failsafe-plugin</artifactId>
-
-                <configuration>
-
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg}
-
-                    </argLine>
-
-                    <!-- Specific to generate mapping between tests and covered code -->
-
-                    <properties>
-
-                        <property>
-
-                            <name>listener</name>
-
-                            <value>org.sonar.java.jacoco.JUnitListener</value>
-
-                        </property>
-
-                    </properties>
-
-                    <!-- Let's put failsafe reports with surefire to have access to tests 
-
-                        failures/success reports in sonar -->
-
-                    <reportsDirectory>${project.build.directory}/surefire-reports
-
-                    </reportsDirectory>
-
-                </configuration>
-
-            </plugin>
-
-            <plugin>
-
-                <groupId>org.jacoco</groupId>
-
-                <artifactId>jacoco-maven-plugin</artifactId>
-
-                <version>${jacoco.version}</version>
-
-                <executions>
-
-                    <!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info 
-
-                        to be passed to the JVM hosting the code being tested. -->
-
-                    <execution>
-
-                        <id>prepare-ut-agent</id>
-
-                        <phase>process-test-classes</phase>
-
-                        <goals>
-
-                            <goal>prepare-agent</goal>
-
-                        </goals>
-
-                        <configuration>
-
-                            <destFile>${sonar.jacoco.reportPath}</destFile>
-
-                            <propertyName>jacoco.agent.ut.arg</propertyName>
-
-                            <append>true</append>
-
-                        </configuration>
-
-                    </execution>
-
-                    <!-- Prepares a variable, jacoco.agent.it.arg, that contains the info 
-
-                        to be passed to the JVM hosting the code being tested. -->
-
-                    <execution>
-
-                        <id>prepare-it-agent</id>
-
-                        <phase>pre-integration-test</phase>
-
-                        <goals>
-
-                            <goal>prepare-agent</goal>
-
-                        </goals>
-
-                        <configuration>
-
-                            <destFile>${sonar.jacoco.itReportPath}</destFile>
-
-                            <propertyName>jacoco.agent.it.arg</propertyName>
-
-                            <append>true</append>
-
-                        </configuration>
-
-                    </execution>
-
-                </executions>
-
-            </plugin>
-
-        </plugins>
-
-    </build>
-
-    <dependencies>
-
-        <dependency>
-
-            <groupId>org.codehaus.sonar-plugins.java</groupId>
-
-            <artifactId>sonar-jacoco-listeners</artifactId>
-
-            <version>${sonar-jacoco-listeners.version}</version>
-
-            <scope>test</scope>
-
-        </dependency>
-
-    </dependencies>
-
-</profile>
-
-<!-- Integraton tests -->
-
-<profile>
-
-    <id>run-its</id>
-
-    <build>
-
-        <plugins>
-
-            <plugin>
-
-                <groupId>org.apache.maven.plugins</groupId>
-
-                <artifactId>maven-failsafe-plugin</artifactId>
-
-                <executions>
-
-                    <execution>
-
-                        <id>integration-test</id>
-
-                        <phase>integration-test</phase>
-
-                        <goals>
-
-                            <goal>integration-test</goal>
-
-                        </goals>
-
-                    </execution>
-
-                    <execution>
-
-                        <id>verify</id>
-
-                        <phase>verify</phase>
-
-                        <goals>
-
-                            <goal>verify</goal>
-
-                        </goals>
-
-                    </execution>
-
-                </executions>
-
-            </plugin>
-
-        </plugins>
-
-    </build>
-
-</profile>
 
 
 </project>
